Add LabelEncoder for maintenance predictions and update visualization notebook

--- a/notebooks/visualization.ipynb
+++ b/notebooks/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "4                 1.022105    31.624070  266.533409  77.774232              2  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -197,13 +197,146 @@
      "output_type": "stream",
      "text": [
       "Unique locations: ['Location C' 'Location B' 'Location D' 'Location A']\n",
-      "Unique times of day: ['Night' 'Morning' 'Evening' 'Afternoon']\n"
+      "Unique times of day: ['Night' 'Morning' 'Evening' 'Afternoon']\n",
+      "Unique maintenance needed: ['Software Update' 'Connector Cleaning' 'Cable Inspection' 'Battery Check']\n"
      ]
     }
    ],
    "source": [
     "print(\"Unique locations:\", df['location'].unique())\n",
-    "print(\"Unique times of day:\", df['time_of_day'].unique())"
+    "print(\"Unique times of day:\", df['time_of_day'].unique())\n",
+    "print(\"Unique maintenance needed:\", df['maintenance_needed'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0          Software Update\n",
+      "1       Connector Cleaning\n",
+      "2       Connector Cleaning\n",
+      "3       Connector Cleaning\n",
+      "4         Cable Inspection\n",
+      "               ...        \n",
+      "4995      Cable Inspection\n",
+      "4996         Battery Check\n",
+      "4997      Cable Inspection\n",
+      "4998      Cable Inspection\n",
+      "4999       Software Update\n",
+      "Name: maintenance_needed, Length: 5000, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['maintenance_needed'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['maintenance_needed'].to_csv('maintenance_needed.txt', index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum charging sessions: 0\n",
+      "Maximum charging sessions: 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the CSV file\n",
+    "file_path = '../data/charging_station_data.csv'\n",
+    "data = pd.read_csv(file_path)\n",
+    "\n",
+    "# Calculate the minimum and maximum values of charging_sessions\n",
+    "min_sessions = data['charging_sessions'].min()\n",
+    "max_sessions = data['charging_sessions'].max()\n",
+    "\n",
+    "print(f\"Minimum charging sessions: {min_sessions}\")\n",
+    "print(f\"Maximum charging sessions: {max_sessions}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.048204788704428\n",
+      "999.7467038074456\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data['total_energy_delivered_kW'].min())\n",
+    "print(data['total_energy_delivered_kW'].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n",
+      "3.154994036448368\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data['charging_duration_hours'].min())\n",
+    "print(data['charging_duration_hours'].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.004733696005427\n",
+      "99.98032597689485\n",
+      "200.0527628328092\n",
+      "399.9846337903469\n",
+      "15.001944178135227\n",
+      "39.99580765040277\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data['current'].min())\n",
+    "print(data['current'].max())\n",
+    "print(data['voltage'].min())\n",
+    "print(data['voltage'].max())\n",
+    "print(data['temperature'].min())\n",
+    "print(data['temperature'].max())"
    ]
   },
   {
