--- a/notebooks/predictive_maintenance.ipynb
+++ b/notebooks/predictive_maintenance.ipynb
@@ -810,13 +810,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "727d725d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['location', 'time_of_day', 'charging_sessions',\n",
+      "       'total_energy_delivered_kW', 'last_maintenance_date',\n",
+      "       'charging_duration_hours', 'temperature', 'voltage', 'current',\n",
+      "       'user_feedback'],\n",
+      "      dtype='object')\n",
+      "Index(['next_maintenance_days', 'maintenance_needed', 'fault_probability'], dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
-    "print(features)\n",
-    "print(targets)"
+    "print(features.columns)\n",
+    "print(targets.columns)"
    ]
   },
   {
@@ -829,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "570ca093",
    "metadata": {},
    "outputs": [],
@@ -847,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "83b607e3",
    "metadata": {},
    "outputs": [],
@@ -894,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "ddc23908",
    "metadata": {},
    "outputs": [
@@ -1322,7 +1335,7 @@
        "MultiOutputRegressor(estimator=RandomForestRegressor(random_state=42))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "3e7e2efd",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "a39c5313",
    "metadata": {},
    "outputs": [
@@ -1412,42 +1425,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CV] END estimator__max_depth=None, estimator__n_estimators=100; total time=   4.7s\n",
-      "[CV] END estimator__max_depth=None, estimator__n_estimators=100; total time=   4.8s\n",
+      "[CV] END estimator__max_depth=None, estimator__n_estimators=100; total time=   4.4s\n",
       "[CV] END estimator__max_depth=None, estimator__n_estimators=100; total time=   4.6s\n",
+      "[CV] END estimator__max_depth=None, estimator__n_estimators=100; total time=   4.4s\n",
+      "[CV] END estimator__max_depth=None, estimator__n_estimators=200; total time=   8.6s\n",
+      "[CV] END estimator__max_depth=None, estimator__n_estimators=200; total time=   8.7s\n",
       "[CV] END estimator__max_depth=None, estimator__n_estimators=200; total time=   9.3s\n",
-      "[CV] END estimator__max_depth=None, estimator__n_estimators=200; total time=   9.4s\n",
-      "[CV] END estimator__max_depth=None, estimator__n_estimators=200; total time=   9.2s\n",
-      "[CV] END estimator__max_depth=None, estimator__n_estimators=300; total time=  13.8s\n",
-      "[CV] END estimator__max_depth=None, estimator__n_estimators=300; total time=  14.5s\n",
-      "[CV] END estimator__max_depth=10, estimator__n_estimators=100; total time=   4.1s\n",
-      "[CV] END estimator__max_depth=10, estimator__n_estimators=100; total time=   4.0s\n",
-      "[CV] END estimator__max_depth=None, estimator__n_estimators=300; total time=  14.3s\n",
-      "[CV] END estimator__max_depth=10, estimator__n_estimators=100; total time=   3.9s\n",
-      "[CV] END estimator__max_depth=10, estimator__n_estimators=200; total time=   7.8s\n",
-      "[CV] END estimator__max_depth=10, estimator__n_estimators=200; total time=   7.6s\n",
-      "[CV] END estimator__max_depth=10, estimator__n_estimators=200; total time=   7.7s\n",
-      "[CV] END estimator__max_depth=10, estimator__n_estimators=300; total time=  11.3s\n",
-      "[CV] END estimator__max_depth=10, estimator__n_estimators=300; total time=  11.4s\n",
-      "[CV] END estimator__max_depth=20, estimator__n_estimators=100; total time=   4.6s\n",
-      "[CV] END estimator__max_depth=10, estimator__n_estimators=300; total time=  11.2s\n",
-      "[CV] END estimator__max_depth=20, estimator__n_estimators=100; total time=   4.7s\n",
-      "[CV] END estimator__max_depth=20, estimator__n_estimators=100; total time=   4.7s\n",
-      "[CV] END estimator__max_depth=20, estimator__n_estimators=200; total time=   9.3s\n",
-      "[CV] END estimator__max_depth=20, estimator__n_estimators=200; total time=   9.3s\n",
-      "[CV] END estimator__max_depth=20, estimator__n_estimators=200; total time=   9.1s\n",
-      "[CV] END estimator__max_depth=20, estimator__n_estimators=300; total time=  13.6s\n",
-      "[CV] END estimator__max_depth=20, estimator__n_estimators=300; total time=  14.0s\n",
-      "[CV] END estimator__max_depth=30, estimator__n_estimators=100; total time=   4.6s\n",
-      "[CV] END estimator__max_depth=20, estimator__n_estimators=300; total time=  13.6s\n",
-      "[CV] END estimator__max_depth=30, estimator__n_estimators=100; total time=   4.8s\n",
-      "[CV] END estimator__max_depth=30, estimator__n_estimators=100; total time=   5.4s\n",
-      "[CV] END estimator__max_depth=30, estimator__n_estimators=200; total time=   9.8s\n",
-      "[CV] END estimator__max_depth=30, estimator__n_estimators=200; total time=   9.6s\n",
-      "[CV] END estimator__max_depth=30, estimator__n_estimators=200; total time=   9.2s\n",
-      "[CV] END estimator__max_depth=30, estimator__n_estimators=300; total time=  14.1s\n",
-      "[CV] END estimator__max_depth=30, estimator__n_estimators=300; total time=  14.9s\n",
-      "[CV] END estimator__max_depth=30, estimator__n_estimators=300; total time=  12.3s\n",
+      "[CV] END estimator__max_depth=10, estimator__n_estimators=100; total time=   3.6s\n",
+      "[CV] END estimator__max_depth=None, estimator__n_estimators=300; total time=  13.3s\n",
+      "[CV] END estimator__max_depth=10, estimator__n_estimators=100; total time=   3.7s\n",
+      "[CV] END estimator__max_depth=10, estimator__n_estimators=100; total time=   3.5s\n",
+      "[CV] END estimator__max_depth=None, estimator__n_estimators=300; total time=  13.7s\n",
+      "[CV] END estimator__max_depth=None, estimator__n_estimators=300; total time=  13.0s\n",
+      "[CV] END estimator__max_depth=10, estimator__n_estimators=200; total time=   7.2s\n",
+      "[CV] END estimator__max_depth=10, estimator__n_estimators=200; total time=   7.1s\n",
+      "[CV] END estimator__max_depth=10, estimator__n_estimators=200; total time=   7.0s\n",
+      "[CV] END estimator__max_depth=20, estimator__n_estimators=100; total time=   4.3s\n",
+      "[CV] END estimator__max_depth=10, estimator__n_estimators=300; total time=  10.7s\n",
+      "[CV] END estimator__max_depth=20, estimator__n_estimators=100; total time=   4.4s\n",
+      "[CV] END estimator__max_depth=10, estimator__n_estimators=300; total time=  10.8s\n",
+      "[CV] END estimator__max_depth=10, estimator__n_estimators=300; total time=  10.5s\n",
+      "[CV] END estimator__max_depth=20, estimator__n_estimators=100; total time=   4.3s\n",
+      "[CV] END estimator__max_depth=20, estimator__n_estimators=200; total time=   8.6s\n",
+      "[CV] END estimator__max_depth=20, estimator__n_estimators=200; total time=   8.7s\n",
+      "[CV] END estimator__max_depth=20, estimator__n_estimators=200; total time=   8.7s\n",
+      "[CV] END estimator__max_depth=30, estimator__n_estimators=100; total time=   4.4s\n",
+      "[CV] END estimator__max_depth=20, estimator__n_estimators=300; total time=  13.3s\n",
+      "[CV] END estimator__max_depth=30, estimator__n_estimators=100; total time=   4.5s\n",
+      "[CV] END estimator__max_depth=30, estimator__n_estimators=100; total time=   4.4s\n",
+      "[CV] END estimator__max_depth=20, estimator__n_estimators=300; total time=  13.3s\n",
+      "[CV] END estimator__max_depth=20, estimator__n_estimators=300; total time=  13.1s\n",
+      "[CV] END estimator__max_depth=30, estimator__n_estimators=200; total time=   8.7s\n",
+      "[CV] END estimator__max_depth=30, estimator__n_estimators=200; total time=   9.0s\n",
+      "[CV] END estimator__max_depth=30, estimator__n_estimators=200; total time=   8.8s\n",
+      "[CV] END estimator__max_depth=30, estimator__n_estimators=300; total time=  13.2s\n",
+      "[CV] END estimator__max_depth=30, estimator__n_estimators=300; total time=  11.8s\n",
+      "[CV] END estimator__max_depth=30, estimator__n_estimators=300; total time=  10.7s\n",
       "Best Parameters: {'estimator__max_depth': 10, 'estimator__n_estimators': 300}\n"
      ]
     }
@@ -1478,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "526e632b",
    "metadata": {},
    "outputs": [
@@ -1488,7 +1501,7 @@
        "['../models/scaler.joblib']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
